--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="overflow-hidden">
     <div class="flex justify-center items-center w-screen h-screen maxidark">
         <div class="flex justify-center relative">
-                <input type="text" name="usrCity" id="inputCity" placeholder="Enter your city ..." class="w-full h-20 bg-gray-800 pl-6 pr-20 text-lg focus:outline-none focus:border-blue-500 rounded-xl font-bold border-4 border-blue-400 text-gray-100" autocomplete="off">
+                <input type="text" name="usrCity" id="inputCity" placeholder="Entrer une ville ..." class="w-full h-20 bg-gray-800 pl-6 pr-20 text-lg focus:outline-none focus:border-blue-500 rounded-xl font-bold border-4 border-blue-400 text-gray-100" autocomplete="off">
                 <input type="submit" class="absolute right-0 h-full bg-blue-400 rounded-r-xl w-16 focus:outline-none cursor-pointer" id="submit" value="">
                 <img src="assets/svg/chevron.svg" alt="" class="absolute w-4 right-6 top-7 pointer-events-none">
                 <div id="autocompletion" class="w-full h-52 absolute top-20 overflow-scroll"></div>
