fix autocompletion scroll bar and remove console.log

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="text" name="usrCity" id="inputCity" placeholder="Entrer une ville ..." class="w-full h-20 bg-gray-800 pl-6 pr-20 text-lg focus:outline-none focus:border-blue-500 rounded-xl font-bold border-4 border-blue-400 text-gray-100" autocomplete="off">
                 <input type="submit" class="absolute right-0 h-full bg-blue-400 rounded-r-xl w-16 focus:outline-none cursor-pointer" id="submit" value="">
                 <img src="assets/svg/chevron.svg" alt="" class="absolute w-4 right-6 top-7 pointer-events-none">
-                <div id="autocompletion" class="w-full h-52 absolute top-20 overflow-scroll"></div>
+                <div id="autocompletion" class="w-full h-52 absolute top-20 hidden overflow-x-hidden"></div>
         </div>
         <div class="flex justify-center w-80 hidden" id="card">
             <div class="w-full p-6 rounded-lg bg-gradient-to-br from-gray-800 to-gray-1000">
